2011-01-18  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* src/wxterminal/gp_cairo.c:  Cast size_t arguments to (int).

2011-01-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgraph.c:  Pass mouse wheel events through to the core
	mousing code so that interactive pan/zoom works from the windows
	terminal.

2011-01-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_logscale set_autoscale) src/unset.c (unset_autoscale)
	src/axis.h docs/gnuplot.doc:  Remove macro INIT_AXIS_ARRAY.
	"set logscale" should not affect pseudo-axes.
	Bug #3159062

2011-01-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots):  Minimum value of polar axis always
	auto-scales to 0 (already documented but implementation lacked).

2011-01-10  David Kuehling <dvdkhlng@gmx.de>

	* term/linux.trm:  Makes linux.trm work with all SVGAlib video modes,
	not only 16 and 256-color modes.

	* src/term.c (init_terminal):  Correct the auto-selection of terminal
	type vgagl or linux.  Only select vgagl if lib3dkit is present.

2011-01-08  Hans-Bernhard Broeker <broeker@physik.rwth-aachen.de>

	* src/internal.c (f_time): Don't use a local variable of the same
	name as a function you're trying to call.

2011-01-07  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/unset.c (reset_command):
	"reset" didn't restore default for "set raxis"

2011-01-03  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/internal.c (f_time) src/stdfn.h docs/gnuplot.doc:
	Fix breakage caused by the previous update

2011-01-02  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/internal.c (f_time) docs/gnuplot.doc:
	Modified time() so that type of result depends on type of argument

2011-01-01  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/eval.c src/internal.c src/internal.h: 
	New time() function to get the current system time
	
	* docs/gnuplot.doc demo/timedat.dem:
	Documentation and demo for time()
	
2010-12-29  Daniel Sebald  <daniel.sebald@ieee.org>
